--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "description" : "Functions that build switch functions.",
     "homepage"    : "https://github.com/daxxog/switch-factory",
     "main"        : "sf.js",
-    "version"     : "0.0.1",
+    "version"     : "0.0.2",
     "engines": { "node" : ">=0.4.0" },
     "maintainers": [{
         "name"  : "David Volm",
@@ -16,6 +16,7 @@
     }],
     "devDependencies": {
         "str-allow": "*",
+        "uglify-js": "*",
         "stoptime": "*"
     }
 }
