--- a/package.json
+++ b/package.json
@@ -3,19 +3,18 @@
     "description" : "Functions that build switch functions.",
     "homepage"    : "https://github.com/daxxog/switch-factory",
     "main"        : "sf.js",
-    "version"     : "0.0.5",
+    "version"     : "0.0.6",
     "engines": { "node" : ">=0.4.0" },
     "maintainers": [{
         "name"  : "David Volm",
         "email" : "david@volminator.com",
         "web"   : "http://daxxog.com/"
     }],
-    "repositories": [{
+    "repository": {
         "type" : "git",
         "url"  : "https://github.com/daxxog/switch-factory.git"
-    }],
+    },
     "devDependencies": {
-        "str-allow": "*",
         "uglify-js": "*",
         "stoptime": "*"
     }
